--- a/index.html
+++ b/index.html
@@ -40,5 +40,22 @@
         some text 
     </div>
 
+    <main class="main-ctn">
+        <div class="art-ctn">
+            <article class="article art-1">
+                <h1>TNW</h1>
+                <h2>Some text</h2>
+                <span>Author</span>
+            </article>
+            <article class="article art-2">
+                <h2>Some text</h2>
+                <span>Author</span>
+            </article>
+            <article class="article art-3">
+                <h2>Some text</h2>
+                <span>Author</span>
+            </article>
+        </div>
+    </main>
 </body>
 </html>
