--- a/index.html
+++ b/index.html
@@ -43,9 +43,27 @@
   <main class="main-ctn">
     <div class="art-ctn">
       <article class="article art-1">
-        <h1>TNW</h1>
-        <h2>Some text</h2>
-        <span>Author</span>
+        
+        <div class="art-1-cnt">
+          <div class="top-cnt">
+            <img src="images/download.svg" alt="">
+            <span>Wednesday - March 10 2020</span>
+          </div>
+          <div class="btm-cnt">
+            <h2>Tech</h2>
+            <h1>
+              Google’s Meena is impressive, but AI chatbots are still ‘cheap
+              imitations’ of humans
+            </h1>
+            <div class="art-other-text">
+              <span>by Ben Dickson</span>
+              <img src="images/clock.png" alt="">
+              <span>1 hour ago </span>
+              <img src="images/share.png" alt="">
+              <span> 2</span>
+            </div>
+        </div>
+      </div>
       </article>
       <article class="article art-2">
         <h2>Some text</h2>
