--- a/index.html
+++ b/index.html
@@ -57,21 +57,41 @@
             </h1>
             <div class="art-other-text">
               <span>by Ben Dickson</span>
-              <img src="images/clock.png" alt="">
+              <img class="cl-and-share" src="images/clock.png" alt="">
               <span>1 hour ago </span>
-              <img src="images/share.png" alt="">
+              <img class="cl-and-share" src="images/share.png" alt="">
               <span> 2</span>
             </div>
+          </div>
         </div>
-      </div>
       </article>
       <article class="article art-2">
-        <h2>Some text</h2>
-        <span>Author</span>
+        <div class="art-2-div">
+        <div class="art-2-ctn">
+          <h5>TECH</h5>
+          <p>The US wants to track your phone’s location data to help limit the spread of coronavirus</p>
+          <ul>
+            <li>by Ivan Mehta</li>
+            <li><img class="cl-and-share" src="images/clock.png" alt=""></li>
+            <li>2 hours ago</li>
+            <li><img class="cl-and-share" src="images/share.png" alt=""></li>
+          </ul>
+        </div>
+        </div>
       </article>
       <article class="article art-3">
-        <h2>Some text</h2>
-        <span>Author</span>
+        <div class="art-3-div">
+          <div class="art-3-ctn">
+            <h5>TECH</h5>
+            <p>5 easy tips on how to brainstorm with your newly remote team</p>
+            <ul>
+              <li>by Ivan Mehta</li>
+              <li><img class="cl-and-share" src="images/clock.png" alt=""></li>
+              <li>2 hours ago</li>
+              <li><img class="cl-and-share" src="images/share.png" alt=""></li>
+            </ul>
+          </div>
+          </div>
       </article>
     </div>
 
