Modified latest funding articles

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="sec-ctn">
 
       <div class="latest-news">
-        <h2>Latest news > </h2>
+        <h2>Latest news ></h2>
       </div>
 
       <div class="news-ctn">
@@ -186,18 +186,115 @@
       </div>
 
       <div class="latest-fnd">
-        <h2>Latest funding</h2>
+        <h2>Latest funding rounds on Index.co ></h2>
         <ul>
-          <li>Info</li>
-          <li>Info</li>
-          <li>Info</li>
+          <li>Add info</li>
+          <li>|</li>
+          <li>Get updates by email</li>
+          <li>|</li>
+          <li>See more</li>
         </ul>
       </div>
       <div class="funding-ctn">
-        <div class="funds fund1"></div>
-        <div class="funds fund2"></div>
-        <div class="funds fund3"></div>
-        <div class="funds fund4"></div>
+        <div class="div-ctn-bck">
+          <div class="funds fund1">
+            <div class="fund-1">
+              <p><a href="#">Video Experts Group</a></p>
+            </div>
+            <div class="funds fund-2">
+              <p><a href="#">$1M</a></p>
+              <span><a href="#">SEED FUND</a></span>
+            </div>
+            <div><a href="#"><img class="vxg1" src="images/vxg.jpeg" alt=""></a></div>
+          </div>
+          <div class="funds fund2">
+            <a href="#"><img class="tag-img" src="images/tag.jpg" alt=""></a>
+            <p><a href="#">Entreprise Software, +2</a></p>
+          </div>
+          <div class="funds fund3">
+            <img class="portf-img" src="images/portfolio.svg" alt="">
+            <p><a href="#">Mars Investment Accelerator Fund</a></p>
+          </div>
+          <div class="funds fund4">
+            <p><a href="#">Video Software Startup VXG raises $1</a></p>
+            <p><a href="#">million seed round <span>on Betakit</span></a></p>
+          </div>
+        </div>
+
+        <div class="div-ctn-bck">
+          <div class="funds fund1">
+            <div class="fund-1">
+              <p><a href="#">Atlas Cloud</a></p>
+            </div>
+            <div class="funds fund-2">
+              <p><a href="#">$2M</a></p>
+              <span><a href="#">CENTURE CAPITAL</a></span>
+            </div>
+            <div><a href="#"><img class="vxg1" src="images/vxg3.png" alt=""></a></div>
+          </div>
+          <div class="funds fund2">
+            <a href="#"><img class="tag-img" src="images/tag.jpg" alt=""></a>
+            <p><a href="#">Information Technology, +2</a></p>
+          </div>
+          <div class="funds fund3">
+            <img class="portf-img" src="images/portfolio.svg" alt="">
+            <p><a href="#">Northern Venture Capital Trust Funds (VCTs)</a></p>
+          </div>
+          <div class="funds fund4">
+            <p><a href="#">Atlas Cloud Raises $2M in Funding</a></p>
+            <p><a href="#"><span>on FinSMEs</span></a></p>
+          </div>
+        </div>
+        
+        <div class="div-ctn-bck">
+          <div class="funds fund1">
+            <div class="fund-1">
+              <p><a href="#">Oura Health</a></p>
+            </div>
+            <div class="funds fund-2">
+              <p><a href="#">$25.5M</a></p>
+              <span><a href="#">SERIES B</a></span>
+            </div>
+            <div><a href="#"><img class="vxg1" src="images/vxg4.jpeg" alt=""></a></div>
+          </div>
+          <div class="funds fund2">
+            <a href="#"><img class="tag-img" src="images/tag.jpg" alt=""></a>
+            <p><a href="#">Consumer Electronics, +3</a></p>
+          </div>
+          <div class="funds fund3">
+            <img class="portf-img" src="images/portfolio.svg" alt="">
+            <p><a href="#">Forerunner Ventures and Southern Department of Health</a></p>
+          </div>
+          <div class="funds fund4">
+            <p><a href="#">Finnish wearable Startup Oura bags</a></p>
+            <p><a href="#">$25.5M to update its health<span>on Silicon</span></a></p>
+          </div>
+        </div>
+
+        <div class="div-ctn-bck">
+          <div class="funds fund1">
+            <div class="fund-1">
+              <p><a href="#">Video Experts Group</a></p>
+            </div>
+            <div class="funds fund-2">
+              <p><a href="#">$1M</a></p>
+              <span><a href="#">SEED FUND</a></span>
+            </div>
+            <div><a href="#"><img class="vxg1" src="images/vxg.jpeg" alt=""></a></div>
+          </div>
+          <div class="funds fund2">
+            <a href="#"><img class="tag-img" src="images/tag.jpg" alt=""></a>
+            <p><a href="#">Entreprise Software, +2</a></p>
+          </div>
+          <div class="funds fund3">
+            <img class="portf-img" src="images/portfolio.svg" alt="">
+            <p><a href="#">Mars Investment Accelerator Fund</a></p>
+          </div>
+          <div class="funds fund4">
+            <p><a href="#">Video Software Startup VXG raises $1</a></p>
+            <p><a href="#">million seed round <span>on Betakit</span></a></p>
+          </div>
+        </div>
       </div>
 
       <div class="sec-art-ctn">
