Change font-family and gradient for main 3 articles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>TNW Clone</title>
   <link rel="stylesheet" href="style.css" type="text/css">
   <script src="https://kit.fontawesome.com/778421a61f.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mitr&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cantata+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header1">
