Modified font-family with the proper one

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Mitr&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cantata+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header1">
@@ -267,7 +268,7 @@
           </div>
           <div class="funds fund3">
             <img class="portf-img" src="images/portfolio.svg" alt="">
-            <p><a href="#">Forerunner Ventures and Southern Department of Health</a></p>
+            <p><a href="#">Forerunner Ventures and Health problems</a></p>
           </div>
           <div class="funds fund4">
             <p><a href="#">Finnish wearable Startup Oura bags</a></p>
