Modify the first article and image. Add responsiveness

--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
         
         <div class="art-1-cnt">
           <div class="top-cnt">
-            <img src="images/download.svg" alt="">
+            <a href="#"><img src="images/download.svg" alt=""></a>
             <span>Wednesday - March 10 2020</span>
           </div>
           <div class="btm-cnt">
             <h2>Tech</h2>
-            <h1>
-              Google’s Meena is impressive, but AI chatbots are still ‘cheap
-              imitations’ of humans
-            </h1>
+            <a href="#">
+              <h1>  
+                Google’s Meena is impressive, but AI chatbots are still ‘cheap
+                imitations’ of humans
+              </h1>
+            </a>
             <div class="art-other-text">
               <span>by Ben Dickson</span>
               <img class="cl-and-share" src="images/clock.png" alt="">
