add header media query

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
     </ul>
     <div class="search-icon"></div>
   </nav>  
+
+  <nav class="header2-mini">
+    <a class="logo-a" href=""> <div class="menu-logo"></div> </a>
+    <div class="right-icons" >
+      <div class="search-icon"></div>
+      <div class="menu-icon"></div>
+    </div>
+
+  </nav>
+
   <div class="header3"><a href="#">Did you know we have a TECH FESTIVAL? Check it out →</a></div>
   <main class="main-ctn">
     <div class="art-ctn">
