Modified reponsiveness for main 3 articles

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="hd-ctn">
   <header class="header1">
     <div class="header-div">
       <ul>
@@ -33,6 +34,7 @@
   </header>
 
   <nav class="header2">
+    <a class="logo-b" href="#"> <div class="menu-logo"></div> </a>
     <ul>
       <li><a href="#">LATEST</a></li>
       <li><a href="#">HARD FORK</a></li>
@@ -46,7 +48,7 @@
   </nav>  
 
   <nav class="header2-mini">
-    <a class="logo-a" href=""> <div class="menu-logo"></div> </a>
+    <a class="logo-a" href="#"> <div class="menu-logo"></div> </a>
     <div class="right-icons" >
       <div class="search-icon"></div>
       <div class="menu-icon"></div>
@@ -55,6 +57,9 @@
   </nav>
 
   <div class="header3"><a href="#">Did you know we have a TECH FESTIVAL? Check it out →</a></div>
+  
+  </div>
+
   <main class="main-ctn">
     <div class="art-ctn">
       <article class="article art-1">
