Add responsiveness for the next news articles

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
         <h2>Latest funding rounds on Index.co ></h2>
         <ul>
           <li>Add info</li>
-          <li>|</li>
+          <li class="br-line">|</li>
           <li>Get updates by email</li>
-          <li>|</li>
+          <li class="br-line">|</li>
           <li>See more</li>
         </ul>
       </div>
