Modified README file and Changed image size

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
 
   <main class="main-ctn">
-    <div class="art-ctn">
+    <section class="art-ctn">
       <article class="article art-1">
         
         <div class="art-1-cnt">
@@ -117,9 +117,9 @@
           </div>
           </div>
       </article>
-    </div>
+    </section>
 
-    <div class="sec-ctn">
+    <article class="sec-ctn">
 
       <div class="latest-news">
         <h2>Latest news ></h2>
@@ -716,7 +716,7 @@
         </div>
       </div>
 
-    </div>
+    </article>
 
   </main>
   <footer class="footer">
